[project]
name = "slifer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "async-timeout==4.0.3",
    "beautifulsoup4==4.12.2",
    "brotli==1.0.9",
    "certifi==2023.7.22",
    "charset-normalizer==3.2.0",
    "idna==3.4",
    "lyricsgenius==3.0.1",
    "mutagen==1.46.0",
    "pillow==10.0.0",
    "pycryptodomex==3.18.0",
    "python-dotenv>=1.2.2",
    "redis==5.0.0",
    "requests==2.31.0",
    "six==1.16.0",
    "soupsieve==2.4.1",
    "spotipy==2.23.0",
    "urllib3==2.0.4",
    "websockets==11.0.3",
    "yt-dlp==2023.7.6",
]
